<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.bep_bepunctual.MainActivity">

    <!--Titelbild der App im Dashboard -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/ic_wallpaper2"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#FFF9F9"
            android:textSize="70sp"
            android:textStyle="bold" />

    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical">

    <!--Input fuer Username -->


        <EditText
            android:id="@+id/edt_Benutzer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="160dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="" />

        <!--Input fuer Password -->


        <EditText
            android:id="@+id/edt_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="@drawable/ic_passwort"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <!--Button fuer Login, bringt User zu Dashboard -->


        <Button
            android:id="@+id/button_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/register"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>